feat: 退会APIで全データを削除
